[package]
name = "exe-a"
version = "0.1.0"
authors = ["Drew Pirrone-Brusse <drew.pirrone.brusse@gmail.com>"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
lib-a = { path = "../1_lib-a", features = ["f-a"] }

[target.'cfg(windows)'.dependencies]
lib-a = { path = "../1_lib-a", features = ["f-b"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
lib-a = { path = "../1_lib-a", features = ["f-c"] }
